Cambiando icono de cierre de modal 'ver detalles' ,agregando ver detalle a pagina de favoritos

--- a/src/app/dashboard/components/detalle-mascota/detalle-mascota.component.html
+++ b/src/app/dashboard/components/detalle-mascota/detalle-mascota.component.html
@@ -1,7 +1,7 @@
 <ion-content>
   <ion-card class="flex flex-col items-center rounded-lg shadow-lg overflow-hidden">
-    <button (click)="cerrarModal()" class="absolute top-0 right-0 m-2 text-white bg-principal-blue-400 hover:bg-errors-red-300 rounded-full p-1 shadow-md">
-      <ion-icon name="close" class="text-2xl"></ion-icon>
+    <button (click)="cerrarModal()" class="absolute top-0 right-0 m-2 text-pricipal-grey-400 hover:text-errors-red-300 rounded-full p-1 ">
+      <ion-icon name="close" class="text-3xl"></ion-icon>
     </button>
     <div class="relative w-48 h-48 mt-4">
       <img class="absolute inset-0 w-full h-full object-cover rounded-3xl shadow-md" alt="Imagen de {{ mascota.nom_mascota }}"
