--- a/src/app/dashboard/components/mascotas-list/mascotas-list.page.html
+++ b/src/app/dashboard/components/mascotas-list/mascotas-list.page.html
@@ -3,8 +3,9 @@
   <div class="flex justify-between items-center px-4">
     <div>
       <button (click)="toggleFiltros()" class="text-blue-400 hover:text-blue-600 py-2 px-4 rounded-full mt-2 mb-2">
-        <ion-icon [name]="mostrarFiltros ? 'close-outline' : 'filter-outline'" class="text-lg"></ion-icon> {{
-        mostrarFiltros ? 'Cerrar Filtros' : 'Mostrar Filtros' }}
+        <ion-icon [name]="'filter-outline'" [ngClass]="{'transform rotate-x-180': mostrarFiltros}"
+          class="text-lg transition-transform duration-300"></ion-icon>
+        {{ mostrarFiltros ? 'Mostrar Filtros' : 'Cerrar Filtros' }}
       </button>
     </div>
     <div *ngIf="isLoggedIn()" class="items-center">
@@ -50,7 +51,8 @@
 </section>
 
 <ion-content>
-  <div class="mb-48 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4 p-4">
+  <div class="mb-72 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4 p-4"
+    style="padding-bottom: 120px;">
     <div *ngFor="let mascota of filteredMascotas">
       <ion-card class="flex flex-col">
         <div class="relative w-full" style="padding-top: 100%;">
@@ -64,8 +66,10 @@
               <ion-card-title>{{ mascota.titulo | uppercase }}</ion-card-title>
             </div>
             <button *ngIf="isLoggedIn()" (click)="toggleFavorito(mascota)" [class.text-red-500]="mascota.is_favorito"
-              class="ml-4">
-              <ion-icon [name]="'heart'" [class]="mascota.is_favorito ? 'text-3xl text-red-fav' : 'text-2xl text-pricipal-grey-400'"></ion-icon>
+              class="ml-4 transition duration-300 ease-in-out transform"
+              [ngClass]="{'scale-125': mascota.is_favorito, 'scale-100': !mascota.is_favorito}">
+              <ion-icon [name]="'heart'"
+                [class]="mascota.is_favorito ? 'text-3xl text-red-fav' : 'text-2xl text-principal-grey-400'"></ion-icon>
             </button>
           </div>
           <ion-card-subtitle>Nombre: {{ mascota.nom_mascota }}</ion-card-subtitle>
